# fmp-rs

./: Cargo.toml  README.md
fmp-rs-derive/: Cargo.toml
fmp-rs-derive/src/: lib.rs
fmp-rs/src/: fmp.rs
fmp-rs/src/api/: endpoint.rs  mod.rs  params.rs  query.rs
fmp-rs/src/api/company_search/: general_search.rs  mod.rs
src/: lib.rs
src/api/: client.rs  error.rs
test-suite/: Cargo.toml
test-suite/tests/: test_macro.rs
