[package]
name = "fmp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
derive_builder = "0.12.0"
form_urlencoded = "1.2.1"
futures-util = "0.3.30"
http = "~0.2.5"
querystring = "1.1.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
thiserror = "1.0.50"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
