[package]
name = "fmp-rs-test-suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-impl = "0.1.3"
fmp-rs-derive = { path = "../fmp-rs-derive/" }
fmp-rs= { path = "../fmp-rs/" }
http = "1.0.0"
